--- a/1-fundamentos/3-introducao-a-html-e-css/dia-4-html-e-css-html-semantico/exercicio-2/style.css
+++ b/1-fundamentos/3-introducao-a-html-e-css/dia-4-html-e-css-html-semantico/exercicio-2/style.css
@@ -28,3 +28,16 @@
     font-size: 16px;
 }
 
+/* ARTICLE */
+
+article{
+    margin: 0 440px;
+}
+
+#stomatopoda-pic{
+    width: 50%;
+    display: block;
+    margin: auto;
+    border-radius: 50%;
+    margin-bottom: 16px;
+}
