--- a/1-fundamentos/3-introducao-a-html-e-css/dia-4-html-e-css-html-semantico/exercicio-2/style.css
+++ b/1-fundamentos/3-introducao-a-html-e-css/dia-4-html-e-css-html-semantico/exercicio-2/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 .nav-bar{
@@ -31,7 +31,8 @@
 /* ARTICLE */
 
 article{
-    margin: 0 440px;
+    margin: 0 660px;
+    font-size: 20px;
 }
 
 #stomatopoda-pic{
@@ -40,4 +41,34 @@ article{
     margin: auto;
     border-radius: 50%;
     margin-bottom: 16px;
+}
+
+article h3{
+    margin: 32px 0;
+}
+
+article p{
+    text-align: justify;
+    margin-bottom: 16px;
+}
+
+article table{
+    margin: auto;
+}
+
+#vision-pic{
+    width: 80%;
+    display: block;
+    margin: auto;
+    margin-bottom: 16px;
+}
+
+/* footer */
+
+footer{
+    margin-top: 32px;
+    background-color: rgb(18, 18, 138);
+    text-align: center;
+    padding: 32px;
+    color: aliceblue;
 }
