--- a/1-fundamentos/3-introducao-a-html-e-css/dia-4-html-e-css-html-semantico/exercicio-2/style.css
+++ b/1-fundamentos/3-introducao-a-html-e-css/dia-4-html-e-css-html-semantico/exercicio-2/style.css
@@ -36,7 +36,7 @@ main{
 }
 
 #stomatopoda-pic{
-    width: 50%;
+    width: 600px;
     display: block;
     margin: auto;
     border-radius: 50%;
@@ -57,7 +57,7 @@ main table{
 }
 
 #vision-pic{
-    width: 80%;
+    width: 500px;
     display: block;
     margin: auto;
     margin-bottom: 16px;
