exercise 3 holiday button

--- a/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-3-javascript-eventos/exercise-2/style.css
+++ b/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-3-javascript-eventos/exercise-2/style.css
@@ -56,7 +56,7 @@
   }
   
   .month-container {
-    background: green;
+    background: rgb(0, 58, 128);
     padding: 40px 25px;
     text-align: center;
   }
