exercise 5 part 1 set background color

--- a/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercise-5/style.css
+++ b/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercise-5/style.css
@@ -1,3 +1,18 @@
+*{
+    margin: 4px 16px;
+}
+
+body {
+    background-color: gray;
+}
 .section-content {
     text-align: center;
+}
+
+.preferences{
+    display: flex;
+}
+.buttons{
+    display: flex;
+    flex-direction: column;
 }
