exercise 5 set background color without local storage

--- a/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercise-5/style.css
+++ b/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercise-5/style.css
@@ -12,7 +12,7 @@ body {
 .preferences{
     display: flex;
 }
-.buttons{
+.background-color-buttons{
     display: flex;
     flex-direction: column;
 }
