change font color

--- a/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercise-5/style.css
+++ b/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercise-5/style.css
@@ -11,8 +11,9 @@ body {
 
 .preferences{
     display: flex;
+    border: 1px dotted black;
 }
-.background-color-buttons{
+.my-buttons{
     display: flex;
     flex-direction: column;
 }
