style.css fixes

--- a/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercise-5/style.css
+++ b/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercise-5/style.css
@@ -5,6 +5,7 @@
 body {
     background-color: gray;
 }
+
 .section-content {
     text-align: center;
 }
@@ -12,6 +13,9 @@ body {
 .preferences{
     display: flex;
     border: 1px dotted black;
+    text-align: center;
+    justify-content: center;
+    margin: 16px;
 }
 .my-buttons{
     display: flex;
