--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-3-css-flexbox-parte-1/exercise-5-trybe-tech-gallery/style.css
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-3-css-flexbox-parte-1/exercise-5-trybe-tech-gallery/style.css
@@ -17,6 +17,12 @@ header {
   width: 70px;
 }
 
+#first-section {
+  border: 1px solid blue;
+  display: flex;
+  justify-content: center;
+  margin: 8px 0;
+}
 .gallery-img {
   width: 150px;
 }
