--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-3-css-flexbox-parte-1/exercise-5-trybe-tech-gallery/style.css
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-3-css-flexbox-parte-1/exercise-5-trybe-tech-gallery/style.css
@@ -27,6 +27,20 @@ header {
   width: 150px;
 }
 
+#second-section-container {
+  border: 1px solid blue;
+  display: flex;
+  justify-content: center;
+}
+
+#second-section {
+  border: 1px solid blue;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  width: 30%;
+}
+
 .social-img {
   width: 25px;
   margin-left: 10px;
