--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-3-css-flexbox-parte-1/exercise-5-trybe-tech-gallery/style.css
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-3-css-flexbox-parte-1/exercise-5-trybe-tech-gallery/style.css
@@ -21,6 +21,7 @@ header {
   display: flex;
   justify-content: center;
   margin: 8px 0;
+  font-size: large;
 }
 .gallery-img {
   width: 150px;
@@ -33,14 +34,26 @@ header {
 
 #second-section {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   flex-wrap: wrap;
   width: 30%;
+}
+
+#second-section div {
+  box-shadow: 2px 3px rgba(161, 161, 161, 0.5);
+  background-color: rgb(241, 241, 241);
+  border-radius: 15px;
+  margin: 4px 2px;
 }
 
 .social-img {
   width: 25px;
   margin-left: 10px;
+}
+
+hr {
+  width: 10%;
+  margin: 16px auto;
 }
 
 footer {
