--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/exercise-4/style.css
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/exercise-4/style.css
@@ -22,8 +22,10 @@ body {
 }
 
 .menu-container {
+  width: 100%;
+  border: 1px solid black;
   display: flex;
-  flex-basis: 500px;
+  /* flex-basis: 500px; */
   order: 2;
 }
 
@@ -39,4 +41,18 @@ body {
   font-size: 1.3rem;
   list-style: none;
   margin-right: 10px;
+  display: flex;
 }
+
+/* .menu-container li:nth-child(1) {
+  display: flex;
+  flex-grow: 1;
+}
+.menu-container li:nth-child(2) {
+  display: flex;
+  flex-grow: 1;
+}
+.menu-container li:nth-child(3) {
+  display: flex;
+  flex-grow: 1;
+} */
