--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/exercise-4/style.css
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/exercise-4/style.css
@@ -80,6 +80,8 @@ body {
   flex-direction: column;
   margin: 20px;
   flex-basis: 350px;
+  align-self: center;
+  flex-grow: 1;
 }
 
 .aside-container h3, h4 {
@@ -90,4 +92,5 @@ body {
 .aside-container p {
   margin: 10px 0;
   text-align: justify;
+  display: flex;
 }
