--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/exercise-4/style.css
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/exercise-4/style.css
@@ -51,6 +51,7 @@ body {
 .movie-container {
   display: flex;
   flex-direction: column;
+  flex-basis: 700px;
 }
 
 .movie-container h2 {
@@ -72,10 +73,11 @@ body {
   height: 150px;
   justify-content: center;
   margin: 10px;
+  flex-basis: 16%;
+
 }
 
 .aside-container {
-  border: 1px solid blue;
   display: flex;
   flex-direction: column;
   margin: 20px;
