--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/exercise-4/style.css
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/exercise-4/style.css
@@ -52,6 +52,8 @@ body {
   display: flex;
   flex-direction: column;
   flex-basis: 700px;
+  flex-grow: 10;
+
 }
 
 .movie-container h2 {
@@ -74,7 +76,7 @@ body {
   justify-content: center;
   margin: 10px;
   flex-basis: 16%;
-
+  /* flex-grow: 1; */
 }
 
 .aside-container {
