--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-1-mao-na-massa/style.css
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-1-mao-na-massa/style.css
@@ -80,3 +80,9 @@ Sem alterar a classe trick, faça com que o texto dela apareça somente quando a
     display: block;
   }
 }
+
+@media screen and (min-width: 600px) and (max-width: 1000px) {
+  .card:nth-of-type(2) {
+    display: block;
+  }
+}
