--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-1-mao-na-massa/style.css
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-1-mao-na-massa/style.css
@@ -86,3 +86,15 @@ Sem alterar a classe trick, faça com que o texto dela apareça somente quando a
     display: block;
   }
 }
+
+@media screen and (max-width: 650px) {
+  .card:nth-of-type(3) {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 950px) {
+  .card:nth-of-type(3) {
+    display: block;
+  }
+}
