--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-1-mao-na-massa/style.css
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-1-mao-na-massa/style.css
@@ -98,3 +98,9 @@ Sem alterar a classe trick, faça com que o texto dela apareça somente quando a
     display: block;
   }
 }
+
+@media screen and (max-width: 500px) {
+  .trick{
+    color: black !important;
+  }
+}
