6-5 ex2 media query criado

--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-2/small-screen.css
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-2/small-screen.css
@@ -33,3 +33,9 @@ figure {
 figcaption {
   font-size: .8em;
 }
+
+/* max-width: 600px: Telas de celular. (Mobile devices)
+min-width: 600px: iPads, Tablets
+min-width: 768px: Telas menores, laptops
+min-width: 992px: Desktops
+min-width: 1200px — Telas grandes, screens e TV. */
