--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-2/small-screen.css
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-2/small-screen.css
@@ -11,7 +11,6 @@
 body {
   font-size: 1.2em;
   margin: 0 8px;
-  background-color: aqua;
 }
 article {
   text-align: justify;
@@ -24,21 +23,40 @@ h2 {
 }
 img {
 	max-width: 100%;
+  border-radius: 16px;
 }
 main {
-  border: 3px solid green;
 }
 section {
-  border: 1px solid black;
-  display: flex;
-  flex-flow: row wrap;
 }
 figure {
-  border: 1px solid blue;
 	width: 45%;
   text-align: center;
   margin: 8px;
 }
 figcaption {
-  font-size: .8em;
+  font-size: 1.1em;
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    background-color: rgb(183, 245, 245);
+  }
+  section {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+  }
+  figcaption {
+    font-size: .8em;
+  }
+}
+@media screen and (min-width: 1200px) {
+  body {
+    background-color: rgb(167, 222, 167);
+    font-size: 1.3em;
+    margin: 0 32px;
+    max-width: 70%;
+  }
+  
 }
