--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-2/small-screen.css
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-2/small-screen.css
@@ -55,8 +55,12 @@ figcaption {
   body {
     background-color: rgb(167, 222, 167);
     font-size: 1.3em;
-    margin: 0 32px;
-    max-width: 70%;
+    margin: 0 auto;
+    max-width: 80%;
   }
   
+  figure {
+    width: 30%;
+  }
+
 }
