--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-3/alice.css
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-3/alice.css
@@ -11,6 +11,8 @@ html {
     background-color: rgb(183, 237, 237);
     margin: 8px 16px;
     font-size: 1.0em;
+    line-height: 1.5;
+
   }
 
   header {
@@ -18,6 +20,11 @@ html {
     color: cyan;
     margin: -8px -16px;
     padding: 4px 4px;
+  }
+
+  aside {
+    margin: 0 auto;
+    max-width: 80%;
   }
 
   .nav-menu {
@@ -44,10 +51,16 @@ html {
   }
 
   article {
+    margin: 0 auto;
     text-align: justify;
-    max-width: 100%;
+    max-width: 80%;
   }
 
+  footer {
+    margin: 0 auto;
+    text-align: justify;
+    max-width: 80%;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
