6-5 ex3 large screen

--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-3/alice.css
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-3/alice.css
@@ -100,6 +100,29 @@ html {
 @media screen and (min-width: 992px) {
   body {
     background-color: rgb(235, 212, 235);
+    margin: 8px 16px;
+  }
+  header {
+    background-color: black;
+    color: rgb(255, 91, 192);
+    margin: -8px -16px;
+    padding: 4px 4px;
+    
+  }
+  .nav-menu {
+    margin: 8px 16px;
+    list-style: none;
+    display: flex;
+    padding: 0;
+  }
+
+  .nav-menu li {
+    max-width: 100%;
+    display: flex;
+    margin: 0 6px;
+  }
+  .nav-menu li:nth-child(1) {
+    flex-grow: 1;
   }
   .container {
     flex-wrap: nowrap;
