--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-4/kitten-kare.css
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-4/kitten-kare.css
@@ -79,24 +79,13 @@ body {
   height: 1%;
 }
 
-@media screen and (max-width:794px) and (max-height: 794px) {
+@media print {
   img {
     border-radius: 50%;
   }
 
-  #header {
-    display: flex;
-    justify-content: center;
-    font-size: 0.3em;
-    background: none;
-    padding: 8px;
-  }
-  #navigation {
-    background: none;
-  }
-  #footer {
-    background: none;
-    color: white;
+  #header,  #navigation, #footer {
+    display: none;
   }
   
   #content {
