--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-4/kitten-kare.css
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-4/kitten-kare.css
@@ -101,3 +101,40 @@ body {
     margin: 0 0 0 4%;
   }
 }
+
+@media screen and (max-width: 360px) and (max-height: 640px) {
+  img {
+    border-radius: 50%;
+    width: 100%;
+  }
+
+  aside {
+    display: none;
+  }
+
+  body {
+    padding: 0;
+    text-align: justify;
+  }
+
+  #navigation {
+    margin: 100px auto 0 auto;
+    width: 90%;
+  }
+
+  #navigation ul {
+    flex-direction: column;
+  }
+
+  #navigation li a {
+    border: none;
+  }
+
+  header {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 35px;
+  }
+}
