--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-4/kitten-kare.css
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-4/kitten-kare.css
@@ -104,7 +104,7 @@ body {
 
 @media screen and (max-width: 360px) and (max-height: 640px) {
   img {
-    border-radius: 50%;
+    border-radius: 10%;
     width: 100%;
   }
 
@@ -115,6 +115,11 @@ body {
   body {
     padding: 0;
     text-align: justify;
+  }
+
+  #content {
+    margin: 0 auto;
+    width: 90%;
   }
 
   #navigation {
