--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-5-bonus/style.css
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-5-bonus/style.css
@@ -106,3 +106,18 @@ footer{
         width: 80%;
     }
 }
+
+@media print {
+    header, #references, footer {
+        display: none;
+    }
+
+    main {
+        margin: 0 16px ;
+        font-size: 1.2em;
+    }
+
+    #img-div {
+        width: 60%;
+    }
+}
