--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/src/style.css
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/src/style.css
@@ -2,5 +2,45 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Fira Code', monospace;
 }
 
+body {
+  background-color: #282C33;
+  color: white;
+  min-height: 100vh;
+  min-width: 100vw;
+}
+
+h1 span {
+  color: #72aee6;
+}
+
+.currency-form-container {
+  display: flex;
+  gap: 8px;
+}
+
+.currency-form {
+  display: flex;
+  flex-direction: column;
+  font-size: 12px;
+  line-height: 16px;
+  gap: 8px;
+}
+
+#moeda {
+  width: 171px;
+  height: 48px;
+  background: rgba(217, 217, 217, 0.1);
+  border-radius: 10px;
+}
+
+button {
+  background:#72aee6;
+  border: 1px solid#72aee6;
+  border-radius: 10px;
+  width: 171px;
+  height: 48px;
+  align-self: flex-end;
+}
