--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/src/style.css
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/src/style.css
@@ -16,6 +16,13 @@ h1 span {
   color: #72aee6;
 }
 
+header {
+  margin: 63px 306px 0;
+}
+main {
+  margin: 0 306px;
+}
+
 .currency-form-container {
   display: flex;
   gap: 8px;
