--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/src/style.css
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/src/style.css
@@ -18,19 +18,12 @@ body {
 
 #currency-section h1 {
   text-align: center;
+  padding-top: 8px;
 }
 
 h1 span {
   color: #72aee6;
 }
-/* 
-header {
-  margin: 0px 306px 0;
-}
-
-main {
-  margin: 0 306px;
-} */
 
 .currency-form-container {
   display: flex;
@@ -80,7 +73,7 @@ button {
   margin: 8px;
   overflow: scroll;
   height: 600px;
-  padding-bottom: 32px;
+  padding-bottom: 44px;
 }
 
 li {
