--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/src/style.css
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/src/style.css
@@ -96,6 +96,16 @@ li {
   gap: 4px;
   padding-left: 8px;
   font-size: 15px;
+  transition: 0.7s;
+}
+
+#value {
+  color: #f1f168;
+  flex-grow: 1;
+}
+
+li:hover {
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 img {
