--- a/2-front-end/9-context-api-e-react-hooks/dia-1-react-hooks-usestate-useeffect/tryber-forms/src/App.css
+++ b/2-front-end/9-context-api-e-react-hooks/dia-1-react-hooks-usestate-useeffect/tryber-forms/src/App.css
@@ -5,6 +5,11 @@
   text-align: center;
 }
 
+.App forms {
+  display: flex;
+  flex-direction: column;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
