--- a/2-front-end/9-context-api-e-react-hooks/dia-1-react-hooks-usestate-useeffect/trybe-mail/src/App.css
+++ b/2-front-end/9-context-api-e-react-hooks/dia-1-react-hooks-usestate-useeffect/trybe-mail/src/App.css
@@ -18,6 +18,10 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+li {
+  display: flex;
+  justify-content: space-between;
+}
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
