--- a/2-front-end/9-context-api-e-react-hooks/dia-1-react-hooks-usestate-useeffect/trybe-mail/src/App.css
+++ b/2-front-end/9-context-api-e-react-hooks/dia-1-react-hooks-usestate-useeffect/trybe-mail/src/App.css
@@ -9,3 +9,11 @@ li {
   display: flex;
   justify-content: space-between;
 }
+
+.message-read {
+  background-color: greenyellow;
+}
+
+.message-unread {
+  background-color: red;
+}
